--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
